# OCRDflash

./: .gitignore  README.md  demo.py  main.py  pyproject.toml  requirements.txt
ocr_dflash/: __init__.py  cli.py  draft_verify.py  eval.py  generator.py  io_utils.py  layout.py  layout_demo.py  markdown_writer.py  model_loader.py  pdf_text.py  pipeline.py  schemas.py  simple_pipeline.py  simple_vlm.py  table_native.py  transformers_demo.py  transformers_verify.py
tests/: test_core.py
torchvision/: __init__.py  io.py
torchvision/transforms/: __init__.py  functional.py
torchvision/transforms/v2/: __init__.py  functional.py
