[project]
name = "ocr-dflash"
version = "0.1.0"
description = "PDF-native draft-guided VLM acceleration research pipeline"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "einops>=0.8.2",
    "paddleocr[doc-parser]>=3.6.0",
    "paddlepaddle-gpu==3.2.1; sys_platform == 'linux' and platform_machine == 'x86_64'",
    "pillow>=10.4.0",
    "pymupdf>=1.24.10",
    "sentencepiece>=0.2.1",
    "transformers>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[project.scripts]
ocr-dflash = "ocr_dflash.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ocr_dflash"]

[[tool.uv.index]]
name = "paddle-cu126"
url = "https://www.paddlepaddle.org.cn/packages/stable/cu126/"
explicit = true

[tool.uv.sources]
paddlepaddle-gpu = [
  { index = "paddle-cu126", marker = "sys_platform == 'linux' and platform_machine == 'x86_64'" },
]
