[project]
name = "ocr-dflash"
version = "0.1.0"
description = "Simple PDF layout + PaddleOCR-VL DFlash research runner"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ocr-dflash = "ocr_dflash.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ocr_dflash"]
